# Quantum-Inspired-Optimization

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BACKGROUND.md  EXPERIMENTAL_METHODOLOGY.md  MATHEMATICAL_FORMULATION.md
notebooks/: quantum_crew_scheduling.ipynb
outputs/: quantum-inspired-construction-scheduling.pptx
results/: annealing_tuning.csv  consistency_summary.csv  executive_summary.csv  main_comparison.csv  qaoa_micro_results.csv  random_benchmarks.csv  run_metadata.json
src/crew_schedule/: __init__.py  annealing.py  classical.py  examples.py  experiments.py  models.py  qaoa.py  qubo.py  visualization.py
tests/: conftest.py  test_artifacts.py  test_models_classical.py  test_qubo.py  test_solvers_experiments.py  test_visualization.py
