[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-crew-scheduling"
version = "0.1.0"
description = "Time-indexed QUBO models for construction crew scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dimod>=0.12.20,<0.13",
  "dwave-samplers>=1.6,<2",
  "matplotlib>=3.8,<4",
  "networkx>=3.2,<4",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "qiskit>=2.1,<3",
  "qiskit-optimization>=0.7,<0.8",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.1,<2",
  "nbclient>=0.10,<1",
  "nbformat>=5.10,<6",
  "pytest>=8,<10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

